Change all text in the caard according to the project

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,7 @@
             <img src="./images/logo.png" alt="Logo Biolage" class="es-kv__logo">
             <p class="es-kv__title">Strength<br>Recovery</p>
             <p class="es-kv__subtitle">
-              Spray bez spłukiwania<br>
-              do włosów zniszczonych<br>
+              Szampon do włosów zniszczonych<br>
               wzbogacony w wegański skwalan<br>
             </p>
           </div>
@@ -31,18 +30,19 @@
       <div class="es-benefits">
         <div class="es-benefits__wrapper">
           <div class="es-benefits__tile">
-            <p class="es-benefits__title">Suche, rozdwojone końce...</p>
-            <p class="es-benefits__subtitle"> ...Włosy łamliwe u nasady... Brzmi znajomo?</p>
-            <p class="es-benefits__text">Poznaj moc wegańskiego skwalanu i&nbsp;przywróć Twoim włosom siłę!
-              Wypróbuj <strong>BIOLAGE PROFESSIONAL STRENGTH RECOVERY</strong> Spray,
-              który wzmacnia włókna i&nbsp;zapewnia termoochronę dla osłabionych włosów - <strong>bez spłukiwania!</strong></p>
+            <p class="es-benefits__title">Czy wiesz, że...</p>
+            <p class="es-benefits__subtitle">...rozjaśnianie, koloryzacja, codzienne suszenie i&nbsp;prostowanie osłabia włosy i&nbsp;sprawia, że&nbsp;są&nbsp;one bardziej podatne na&nbsp;uszkodzenia i&nbsp;rozdwajanie końcówek?</p>
+            <p class="es-benefits__text">Gama <strong>STRENGTH RECOVERY</strong> wzbogacona w&nbsp;skwalan pomaga dbać
+              o&nbsp;odpowiednie nawilżenie włosów oraz pomaga chronić je&nbsp;przed uszkodzeniami i&nbsp;złamaniami. Dodatkowo posiada ona
+              emolienty pochodzenia roślinnego, które dzięki temu, że&nbsp;tworzą warstwę na&nbsp;powierzchni włosa pomagają je&nbsp;odżywić i&nbsp;pozostawiają
+              je&nbsp;miękkie w&nbsp;dotyku.</p>
           </div>
           <div class="es-benefits__tile">
             <ul class="es-benefits__list">
-              <li>Chroni osłabione włosy podczas suszenia suszarką i&nbsp;stylizowania włosów na&nbsp;gorąco</li>
-              <li>82% respondentów uznało swoje włosy za łatwiejsze w&nbsp;układaniu*</li>
-              <li>Odżywia włosy, dodaje blasku i&nbsp;wyraźnie nawilża**</li>
-              <li>Sprawia, że włosy są miękkie, nie plączą się i&nbsp;nie&nbsp;są obciążone</li>
+              <li>Miękkie i gładkie włosy, bez efektu obciążenia</li>
+              <li>Dla wszystkich rodzajów włosów: cienkich, średnich i&nbsp;grubych</li>
+              <li>Odczuwalnie odżywia włosy, dodaje blasku i&nbsp;ułatwia stylizację*</li>
+              <li>Ikoniczne nuty zapachowe — relaksują i&nbsp;poprawiają nastrój</li>
             </ul>
           </div>
         </div>
@@ -53,12 +53,12 @@
             <p class="es-ingredients__title">Składnik przewodni</p>
             <p class="es-ingredients__subtitle">SKWALAN - sekret znany z&nbsp;pielęgnacji skóry
               teraz zadba o&nbsp;Twoje włosy!</p>
-            <p class="es-ingredients__text">Skwalan to wegański składnik, który wspiera warstwę lipidową
-              włosa oraz pomaga w&nbsp;utrzymaniu odpowiedniego nawilżenia.</p>
+            <p class="es-ingredients__text">Skwalan, wegański eliksir pielęgnacji włosów, wzmacnia i&nbsp;wspiera warstwę lipidową włosa, pomagając w&nbsp;utrzymaniu odpowiedniego poziomu nawilżenia. 
+              </p>
             <ul class="es-ingredients__list">
-              <li>Wspiera ochronę włosa przed uszkodzeniami i&nbsp;złamaniami</li>
-              <li>Dodaje blasku i&nbsp;sprawia, że&nbsp;włosy stają&nbsp;się miękkie**</li>
-              <li>Pomaga w utrzymaniu odpowiedniego nawilżenia</li>
+              <li>Pomaga chronić włosy przed uszkodzeniami i&nbsp;złamaniami</li>
+              <li>Dodaje włosom naturalnego blasku**</li>
+              <li>Sprawia, że włosy stają się miękkie</li>
             </ul>
           </div>
           <div class="es-ingredients__right">
@@ -74,12 +74,13 @@
           </div>
           <div class="es-use__left">
             <p class="es-use__title">Sposób użycia</p>
-            <p class="es-use__text"><strong>BIOLAGE PROFESSIONAL STRENGTH RECOVERY</strong> Spray jest szybki i&nbsp;łatwy w&nbsp;aplikacji... dzięki temu <strong>masz pełną kontrolę nad fryzurą i&nbsp;więcej czasu dla siebie!</strong></p>
+            <p class="es-use__text"><strong>BIOLAGE PROFESSIONAL STRENGTH RECOVERY</strong> Szampon delikatnie oczyszcza włosy, a&nbsp;razem z&nbsp;odżywką i&nbsp;sprayem - profesjonalnie regeneruje zniszczone włosy.</p>
             <ul class="es-use__list">
-              <li>Krok 1: Nałóż spray równomiernie na wilgotne włosy i&nbsp;ułóż je&nbsp;według swoich preferencji.</li>
-              <li>Krok 2: Aby wzmocnić efekt nawilżenia i&nbsp;odżywienia, nałóż produkt ponownie na&nbsp;suche włosy.</li>
-              <li>Krok 3: Gotowe! Regeneracja i&nbsp;stylizacja włosów naprawdę jest tak prosta.</li>
+              <li>Krok 1: Zwilż włosy i&nbsp;nałóż niewielką ilość szamponu na&nbsp;skórę głowy.</li>
+              <li>Krok 2: Delikatnie wmasuj szampon i&nbsp;rozprowadź pianę na całej długości włosów.</li>
+              <li>Krok 3: Dokładnie spłucz włosy czystą wodą, a&nbsp;następnie użyj odżywki i&nbsp;spray’u <strong>STRENGTH RECOVERY</strong>, aby zapewnić włosom odpowiedni poziom nawilżenia i&nbsp;ułatwić stylizację.</li>
             </ul>
+            <p class="es-use__text"><strong>PAMIĘTAJ!<br> Jeśli masz cienkie włosy, zastosuj szampon i&nbsp;spray. Nie musisz używać odżywki. </strong></p>
           </div>
 
         </div>
@@ -161,8 +162,8 @@
           </div>
         </div>
         <div class="es-cross__footer">
-          *Test instrumentalny wykonany przez 53&nbsp;respondentów. Przy zastosowaniu spray’u bez spłukiwania Strength Recovery w&nbsp;porównaniu z&nbsp;szamponem bez odżywki.<br>
-          **Efekt przy użyciu systemu STRENGTH RECOVERY wzbogaconego w&nbsp;skwalan i&nbsp;składającego się z&nbsp;szamponu, odżywki i&nbsp;spray’u.<br>
+          *Przy zastosowaniu systemu <strong>BIOLAGE STRENGTH RECOVERY</strong> składającego się z&nbsp;szamponu, odżywki i&nbsp;spray’u.<br>
+          **Efekt przy użyciu systemu <strong>STRENGTH RECOVERY</strong> wzbogaconego w&nbsp;skwalan i&nbsp;składającego się z&nbsp;szamponu, odżywki i&nbsp;spray’u.<br>
           ***Bez składników zwierzęcych i&nbsp;ich&nbsp;pochodnych.<br>
         </div>
 
