Fix compiling error

--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,7 @@
             <p class="es-ingredients__title">Składnik przewodni</p>
             <p class="es-ingredients__subtitle">SKWALAN - sekret znany z&nbsp;pielęgnacji skóry
               teraz zadba o&nbsp;Twoje włosy!</p>
-            <p class="es-ingredients__text">Skwalan, wegański eliksir pielęgnacji włosów, wzmacnia i&nbsp;wspiera warstwę lipidową włosa, pomagając w&nbsp;utrzymaniu odpowiedniego poziomu nawilżenia. 
-              </p>
+            <p class="es-ingredients__text">Skwalan, wegański eliksir pielęgnacji włosów, wzmacnia i&nbsp;wspiera warstwę lipidową włosa, pomagając w&nbsp;utrzymaniu odpowiedniego poziomu nawilżenia.</p>
             <ul class="es-ingredients__list">
               <li>Pomaga chronić włosy przed uszkodzeniami i&nbsp;złamaniami</li>
               <li>Dodaje włosom naturalnego blasku**</li>
